# safety-critical-rust-coding-guidelines

./: .readthedocs.yaml  LICENSE  README.md  _typos.toml  generate-guideline-templates.py  generate_guideline_templates.py  issue-2.md  issue-7.md  make.py  pyproject.toml
.github/: advanced-issue-labeler.yml
.github/ISSUE_TEMPLATE/: CODING-GUIDELINE.yml
.github/auto-pr-tests/: README.md  test_issue_01.json  test_issue_01.snapshot  test_issue_02.json  test_issue_02.snapshot  test_issue_03.json  test_issue_03.snapshot  test_runner.py
.github/workflows/: auto-pr-on-issue.yml  build-guidelines.yml  coding-guideline-issue-labeler.yml  deploy.yml  nightly.yml  ruff-lint.yml  snapshot-ci.yml
builder/: build_cli.py
builder/builder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: issue-formatting-guide.md
exts/coding_guidelines/: README.rst  __init__.py  common.py  fls_checks.py  fls_linking.py  guidelines_checks.py  rust_examples_test.py  spinner.py  std_role.py  write_guidelines_ids.py
exts/rust-code-runner/: __init__.py  generated.rs  rust_examples_aggregate.py  rustc.py
scripts/: README.md  auto-pr-helper.py  test_issue_sample.json
src/: conf.py  index.rst
src/appendices/: licenses.rst
src/coding-guidelines/: associated-items.rst  attributes.rst  concurrency.rst  exceptions-and-errors.rst  expressions.rst  macros.rst  types-and-traits.rst
src/compliance/: compliance-meaning.rst  deviation-process.rst  index.rst
src/process/: guideline-lifecycle.rst  index.rst  style-guideline.rst
src/retired-guidelines/: index.rst  retired-associated-items.rst  retired-attributes.rst  retired-concurrency.rst  retired-entities-and-resolution.rst  retired-exceptions-and-errors.rst  retired-expressions.rst  retired-ffi.rst  retired-functions.rst  retired-generics.rst  retired-implementations.rst  retired-inline-assembly.rst  retired-macros.rst  retired-ownership-and-destruction.rst  retired-patterns.rst  retired-program-structure-and-compilation.rst  retired-statements.rst  retired-types-and-traits.rst  retired-unsafety.rst  retired-values.rst
