[project]
name = "safety-critical-rust-coding-guidelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "builder",
    "tqdm",
    "m2r",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-needs>=5.1.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.workspace]
members = ["builder"]

[tool.uv.sources]
builder = { workspace = true }
[tool.ruff]
# line-length = 88

select = [
  "E", 
  "F",  
  "W",
  "C",
  "I",
  "Q", 
  "B",  
]
# Remove or reduce ignores to catch more issues
ignore = []
extend-ignore = []

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

# [tool.ruff.mccabe]
# max-complexity = 10
